--- a/less/home.less
+++ b/less/home.less
@@ -25,6 +25,9 @@ body {
             font-family: Lato;
             text-align: center;
             h1 {
+              @media @phone {
+                font-size: 3rem;
+              }
                 font-size: 3.5rem;
                 margin: 1% 3% 0;
                 color: @bgcolor;
