--- a/less/mixins.less
+++ b/less/mixins.less
@@ -70,7 +70,8 @@
   }//pic-name
   img {
       width: 15em;
-      min-height:25%;
+      max-height: 15em;
+      min-height: 25%;
       min-width: 25%;
       max-width: 25%;
       // height: 15rem;
